added django tastypie to production eggs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -56,6 +56,7 @@ eggs = ${production:eggs}
      yanc
      coverage
      django-debug-toolbar
+
     
 [production]
 recipe = djangorecipe
@@ -73,10 +74,11 @@ eggs =
      django-extensions
      django-nose
      django-admin-tools
+     django-tastypie
      feedparser
      
      beanstalkc
-     boto
+     boto   
 
 [celery]
 recipe = collective.recipe.celery
