--- a/buildout.cfg
+++ b/buildout.cfg
@@ -87,6 +87,10 @@ broker-host = sqlite:///celery_broker.db
 result-backend = database
 result-dburi = sqlite:///celery_results.db
 imports = myapp.tasks
+initialization = from django.core.management import setup_environ
+	         import settings.development
+		 setup_environ(settings.development)		 
+
 eggs = 
      kombu-sqlalchemy
      myapp
