updated arena settings, updated thunderdome config api_url_template and buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -63,6 +63,9 @@ recipe = djangorecipe
 project = arena
 settings = settings.production
 
+extra-paths = ${buildout:directory}/${django:project}
+	    
+
 eggs = 
      psycopg2
      PyYAML
