removed celery stuff from buildout and arena settings defaults, updated spinup_local_gladiator

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -40,9 +40,10 @@ initialization = from django.core.management import setup_environ
 		 setup_environ(settings.development)		 
 
 eggs = zope.component
-     ${django:eggs}
+     ${production:eggs}
+     requests
 
-     
+
 [django]
 recipe = djangorecipe
 project = arena
@@ -54,9 +55,7 @@ eggs = ${production:eggs}
      werkzeug
      nose-achievements
      yanc
-     coverage
-     django-debug-toolbar
-
+     coverage     
     
 [production]
 recipe = djangorecipe
@@ -66,9 +65,6 @@ settings = settings.production
 eggs = 
      psycopg2
      PyYAML
-     django-celery
-     celerymon
-     flower
      gunicorn
      
      django-extensions
