--- a/buildout.cfg
+++ b/buildout.cfg
@@ -56,7 +56,7 @@ eggs = ${production:eggs}
      nose-achievements
      yanc
      coverage     
-    
+
 [production]
 recipe = djangorecipe
 project = arena
@@ -78,6 +78,8 @@ eggs =
      
      beanstalkc
      boto   
+
+     south
 
 [celery]
 recipe = collective.recipe.celery
