added output kick, which outputs the kick file for a gladiator

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,9 +17,7 @@ recipe = z3c.recipe.mkdir
 paths = var/db
       var/uploads
       var/logs
-      var/repos
-      var/test_repos
-      var/archives
+      var/static
 
 [nose-achievements]
 recipe = zerokspot.recipe.git
