updated README.md and buildout.cfg to include beanstalkd, and added links to other pages in base.html

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts = django
       celery
       mypy
       var-directory
+      beanstalkd
 
 eggs-directory = var/eggs
 parts-directory = var/parts
@@ -99,6 +100,5 @@ recipe = zerokspot.recipe.git
 repository = git://github.com/kr/beanstalkd.git
 branch = master
 newest = True
-as_egg = True
 
      
