added show games visualizers

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -53,8 +53,9 @@ extra-paths = ${buildout:directory}/${django:project}
 eggs = ${production:eggs}
      werkzeug
      nose-achievements
-     yanc
+     yanc     
      coverage     
+     requests     
 
 [production]
 recipe = djangorecipe
