--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,9 @@
 [buildout]
 extends = versions.cfg
-parts = django
+parts = 
       production
+      productionpy
       celery
-      mypy
       var-directory
       beanstalkd
 
@@ -26,11 +26,11 @@ repository = git://github.com/exogen/nose-achievements.git
 rev = 1d57f9e8e95ee0459876ea618b3ca3a34d629371
 as_egg = True
 
-[mypy]
+[developpy]
 recipe = zc.recipe.egg:scripts
 interpreter = python
 extra-paths = ${buildout:directory}
-	    ${buildout:directory}/${django:project}
+	    ${buildout:directory}/${development:project}
 	    ${buildout:directory}/masterblaster
 	    
 scripts = python
@@ -39,30 +39,53 @@ initialization = from django.core.management import setup_environ
 		 setup_environ(settings.development)		 
 
 eggs = zope.component
+     ${development:eggs}
+     requests
+
+[productionpy]
+recipe = zc.recipe.egg:scripts
+interpreter = python
+extra-paths = ${buildout:directory}
+	    ${buildout:directory}/${production:project}
+	    ${buildout:directory}/masterblaster
+
+scripts = python
+initialization = from django.core.management import setup_environ
+	         import settings.production
+		 setup_environ(settings.production)
+
+eggs = zope.component
      ${production:eggs}
      requests
 
-
-[django]
+[development]
 recipe = djangorecipe
 project = arena
 settings = settings.development
-extra-paths = ${buildout:directory}/${django:project}
+extra-paths = ${buildout:directory}/${development:project}
 	    ${nose-achievements:location}
 
-eggs = ${production:eggs}
+eggs = 
+     gunicorn
+     django-extensions
+     django-nose
+     django-admin-tools
+     django-tastypie
      werkzeug
-     nose-achievements
      yanc     
      coverage     
-     requests     
+     requests
+     beanstalkc
+     boto
+     south
+     PyYAML
 
 [production]
 recipe = djangorecipe
 project = arena
 settings = settings.production
 
-extra-paths = ${buildout:directory}/${django:project}
+extra-paths = ${buildout:directory}/${production:project}
 	    
 
 eggs = 
