added jsonschema to buildout config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -79,6 +79,7 @@ eggs =
      boto
      south
      PyYAML
+     jsonschema
 
 [production]
 recipe = djangorecipe
@@ -98,10 +99,11 @@ eggs =
      django-admin-tools
      django-tastypie
      feedparser
-     
+
      beanstalkc
      boto   
 
+     jsonschema
      south
 
 [celery]
