updated django version to >1.6,<1.7 updated buildout.cfg to reflect this

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,9 +34,9 @@ extra-paths = ${buildout:directory}
 	    ${buildout:directory}/masterblaster
 	    
 scripts = python
-initialization = from django.core.management import setup_environ
-	         import settings.development
-		 setup_environ(settings.development)		 
+initialization = import os
+	         os.environ.setdefault("DJANGO_SETTINGS_MODULE", "settings.development")
+		 from django.conf import settings
 
 eggs = zope.component
      ${development:eggs}
@@ -50,9 +50,10 @@ extra-paths = ${buildout:directory}
 	    ${buildout:directory}/masterblaster
 
 scripts = python
-initialization = from django.core.management import setup_environ
-	         import settings.production
-		 setup_environ(settings.production)
+initialization = import os
+	         os.environ.setdefault("DJANGO_SETTINGS_MODULE", "settings.production")
+		 from django.conf import settings
+	       
 
 eggs = zope.component
      ${production:eggs}
