--- a/arena/thunderdome/configs.json
+++ b/arena/thunderdome/configs.json
@@ -1,9 +1,16 @@
 [
  {
-  "client_prefix": "", 
+  "client_prefix": "",
   "beanstalk_host": "localhost", 
   "config_name": "testing_arena", 
   "game_name": "chess-2013", 
   "req_queue_length": 5
+ },
+ {
+  "client_prefix": "ssh://webserver@megaminerai.com",
+  "beanstalk_host": "localhost",
+  "config_name": "megaminerai-13-droids",
+  "game_name" : "megaminerai-13-droids",
+  "req_queue_length" : 5
  }
 ]
