added arena config setting of configs.py added fixtures instead of old setting of db

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts =
       celery
       var-directory
       beanstalkd
+      gunicorn
 
 eggs-directory = var/eggs
 parts-directory = var/parts
@@ -58,6 +59,12 @@ initialization = import os
 eggs = zope.component
      ${production:eggs}
      requests
+
+[gunicorn]
+recipe = zc.recipe.egg
+scripts = gunicorn=gunicorn
+eggs = gunicorn
+     ${production:eggs}
 
 [development]
 recipe = djangorecipe
