added arena to build path for gunicorn, update production with allowed hosts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -65,6 +65,9 @@ recipe = zc.recipe.egg
 scripts = gunicorn=gunicorn
 eggs = gunicorn
      ${production:eggs}
+     
+extra-paths = 
+	    ${buildout:directory}/${production:project}
 
 [development]
 recipe = djangorecipe
