--- a/arena/fixtures/configs.json
+++ b/arena/fixtures/configs.json
@@ -3,7 +3,6 @@
 	"model" : "thunderdome.arenaconfig",
 	"pk" : 1,
 	"fields" : {
-	    "active" : "True",
 	    "client_prefix" : "",
 	    "beanstalk_host" : "localhost",
 	    "config_name" : "testing_arena",
@@ -21,5 +20,18 @@
 	    "game_name" : "megaminerai-13-droids",
 	    "req_queue_length" : 5
 	}
+    },
+    {
+	"model" : "thunderdome.arenaconfig",
+	"pk" : 3,
+	"fields" : {
+	    "active" : "True",
+	    "client_prefix" : "git@github.com/",
+	    "beanstalk_host" : "localhost",
+	    "config_name" : "testing_plants",
+	    "game_name" : "megaminerai-14-plants",
+	    "req_queue_length" : 5
+	}
     }
+
 ]
