Added 'gladiator' folder to var/statics buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,7 @@ recipe = z3c.recipe.mkdir
 paths = var/db
       var/uploads
       var/logs
-      var/static
+      var/static/gladiator
 
 [nose-achievements]
 recipe = zerokspot.recipe.git
