--- a/arena/thunderdome/configs.json
+++ b/arena/thunderdome/configs.json
@@ -12,5 +12,12 @@
   "config_name": "megaminerai-13-droids", 
   "game_name": "megaminerai-13-droids", 
   "req_queue_length": 5
+ },
+ {
+  "client_prefix": "git@github.com:", 
+  "beanstalk_host": "localhost", 
+  "config_name": "testing_pharoah", 
+  "game_name": "megaminerai-15-pharoah", 
+  "req_queue_length": 5
  }
 ]
