--- a/arena/fixtures/configs.json
+++ b/arena/fixtures/configs.json
@@ -43,5 +43,18 @@
 	    "game_name" : "megaminerai-14-plants",
 	    "req_queue_length" : 5
 	}
+    },
+    {
+	"model" : "thunderdome.arenaconfig",
+	"pk" : 5,
+	"fields" : {
+	    "active" : "False",
+	    "client_prefix" : "git@github.com:",
+	    "beanstalk_host" : "localhost",
+	    "config_name" : "testing_pharaoh"
+	    "game_name" : "megaminerai-15-pharaoh",
+	    "req_queue_length" : 5
+	}
     }
 ]
+
