updated buildout with pyopenssl

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -92,6 +92,8 @@ eggs =
      PyYAML
      jsonschema
 
+     pyopenssl
+
 [production]
 recipe = djangorecipe
 project = arena
@@ -116,6 +118,8 @@ eggs =
 
      jsonschema
      south
+
+     pyopenssl
 
 [celery]
 recipe = collective.recipe.celery
