--- a/arena/fixtures/configs.json
+++ b/arena/fixtures/configs.json
@@ -50,7 +50,7 @@
 	"fields" : {
 	    "active" : "False",
 	    "client_prefix" : "git@github.com:",
-	    "beanstalk_host" : "localhost",
+	    "beanstalk_host" : "arena.megaminerai.com",
 	    "config_name" : "testing_pharaoh",
 	    "game_name" : "megaminerai-15-pharaoh",
 	    "req_queue_length" : 5
