--- a/arena/fixtures/configs.json
+++ b/arena/fixtures/configs.json
@@ -25,7 +25,7 @@
 	"model" : "thunderdome.arenaconfig",
 	"pk" : 3,
 	"fields" : {
-	    "client_prefix" : "git@github.com/",
+	    "client_prefix" : "git@github.com:",
 	    "beanstalk_host" : "localhost",
 	    "config_name" : "testing_plants",
 	    "game_name" : "megaminerai-14-plants",
