--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ megaminerai-15-pharaoh
 Checkers
 Anarchy
 megaminerai-16-Anarchy
+megaminerai-16-anarchy
+global_tournament_mmai-16-anarchy.json
+student_tournament_mmai-16-anarchy.json
