added django to eggs list

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -78,6 +78,7 @@ extra-paths = ${buildout:directory}/${development:project}
 
 eggs = 
      gunicorn
+     django
      django-extensions
      django-nose
      django-admin-tools
@@ -106,7 +107,8 @@ eggs =
      psycopg2
      PyYAML
      gunicorn
-     
+
+     django     
      django-extensions
      django-nose
      django-admin-tools
