--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ megaminerai-16-Anarchy
 megaminerai-16-anarchy
 global_tournament_mmai-16-anarchy.json
 student_tournament_mmai-16-anarchy.json
+ChessTest-01-Chess
