--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ megaminerai-16-anarchy
 global_tournament_mmai-16-anarchy.json
 student_tournament_mmai-16-anarchy.json
 ChessTest-01-Chess
+CloneTest-01-Chess
