Changed glog metadata to unstupid

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ global_tournament_mmai-16-anarchy.json
 student_tournament_mmai-16-anarchy.json
 ChessTest-01-Chess
 CloneTest-01-Chess
-chess-2016
+chess-2016/
