--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ student_tournament_mmai-16-anarchy.json
 ChessTest-01-Chess
 CloneTest-01-Chess
 chess-2016/
+megaminerai-17-Spiders
+megaminerai-17-spiders
