Removed migrations from tracking Git breaks migrations all the time, so I'm making them untracked. Shouldn't be any problem to regenerate them for running.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ buildout.cfg
 # Ignore SQLite3 files
 *.db
 
+# ingore migrations
+arena/thunderdome/migrations
+
 # Ignore other nose files
 .noseids
 
