--- a/arena/fixtures/configs.json
+++ b/arena/fixtures/configs.json
@@ -1,107 +1,1 @@
-[
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 1,
-	"fields" : {
-	    "client_prefix" : "",
-	    "beanstalk_host" : "localhost",
-	    "config_name" : "testing_arena",
-	    "game_name" : "chess-2014",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 2,
-	"fields" : {
-	    "client_prefix" : "ssh://webserver@megaminerai.com",
-	    "beanstalk_host" : "localhost",
-	    "config_name" : "megaminerai-13",
-	    "game_name" : "megaminerai-13-droids",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 3,
-	"fields" : {
-	    "client_prefix" : "git@github.com:",
-	    "beanstalk_host" : "localhost",
-	    "config_name" : "testing_plants",
-	    "game_name" : "megaminerai-14-plants",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 4,
-	"fields" : {
-	    "active" : "False",
-	    "client_prefix" : "ssh://webserver@megaminerai.com",
-	    "beanstalk_host" : "arena.megaminerai.com",
-	    "config_name" : "megaminerai-14-plants-live",
-	    "game_name" : "megaminerai-14-plants",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 5,
-	"fields" : {
-	    "active" : "False",
-	    "client_prefix" : "git@github.com:",
-	    "beanstalk_host" : "arena.megaminerai.com",
-	    "config_name" : "testing_pharaoh",
-	    "game_name" : "megaminerai-15-pharaoh",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 6,
-	"fields" : {
-	    "active" : "False",
-	    "client_prefix" : "ssh://webserver@megaminerai.com",
-	    "beanstalk_host" : "arena.megaminerai.com",
-	    "config_name" : "live_pharaoh",
-	    "game_name" : "megaminerai-15-pharaoh",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 7,
-	"fields" : {
-	    "active" : "False",
-	    "client_prefix" : "git@github.com:",
-	    "beanstalk_host" : "localhost",
-	    "config_name" : "new_server_checkers_testing",
-	    "game_name" : "megaminerai-05-checkers",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 8,
-	"fields" : {
-	    "active" : "False",
-	    "client_prefix" : "git@github.com:",
-	    "beanstalk_host" : "localhost",
-	    "config_name" : "pre_mmai16_testing",
-	    "game_name" : "megaminerai-16-anarchy",
-	    "req_queue_length" : 5
-	}
-    },
-    {
-	"model" : "thunderdome.arenaconfig",
-	"pk" : 9,
-	"fields" : {
-	    "active" : "True",
-	    "client_prefix" : "ssh://webserver@megaminerai.com",
-	    "beanstalk_host" : "arena.megaminerai.com",
-	    "config_name" : "mmai16-anarchy",
-	    "game_name" : "megaminerai-16-anarchy",
-	    "req_queue_length" : 5
-	}
-    }
-]
+[{"fields": {"beanstalk_host": "localhost", "config_name": "testing_arena", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "chess-2014", "req_queue_length": 5, "active": false, "client_prefix": ""}, "model": "thunderdome.arenaconfig", "pk": 1}, {"fields": {"beanstalk_host": "localhost", "config_name": "megaminerai-13", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-13-droids", "req_queue_length": 5, "active": false, "client_prefix": "ssh://webserver@megaminerai.com"}, "model": "thunderdome.arenaconfig", "pk": 2}, {"fields": {"beanstalk_host": "localhost", "config_name": "testing_plants", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-14-plants", "req_queue_length": 5, "active": false, "client_prefix": "git@github.com:"}, "model": "thunderdome.arenaconfig", "pk": 3}, {"fields": {"beanstalk_host": "arena.megaminerai.com", "config_name": "megaminerai-14-plants-live", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-14-plants", "req_queue_length": 5, "active": false, "client_prefix": "ssh://webserver@megaminerai.com"}, "model": "thunderdome.arenaconfig", "pk": 4}, {"fields": {"beanstalk_host": "arena.megaminerai.com", "config_name": "testing_pharaoh", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-15-pharaoh", "req_queue_length": 5, "active": false, "client_prefix": "git@github.com:"}, "model": "thunderdome.arenaconfig", "pk": 5}, {"fields": {"beanstalk_host": "arena.megaminerai.com", "config_name": "live_pharaoh", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-15-pharaoh", "req_queue_length": 5, "active": false, "client_prefix": "ssh://webserver@megaminerai.com"}, "model": "thunderdome.arenaconfig", "pk": 6}, {"fields": {"beanstalk_host": "localhost", "config_name": "new_server_checkers_testing", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-05-checkers", "req_queue_length": 5, "active": false, "client_prefix": "git@github.com:"}, "model": "thunderdome.arenaconfig", "pk": 7}, {"fields": {"beanstalk_host": "localhost", "config_name": "pre_mmai16_testing", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-16-anarchy", "req_queue_length": 5, "active": false, "client_prefix": "git@github.com:"}, "model": "thunderdome.arenaconfig", "pk": 8}, {"fields": {"beanstalk_host": "arena.megaminerai.com", "config_name": "mmai16-anarchy", "api_url_template": "http://megaminerai.com/api/repo/tags/", "game_name": "megaminerai-16-anarchy", "req_queue_length": 5, "active": false, "client_prefix": "ssh://webserver@megaminerai.com"}, "model": "thunderdome.arenaconfig", "pk": 9}, {"fields": {"beanstalk_host": "192.168.1.1", "config_name": "", "api_url_template": "https://megaminerai.com/api/repo/tags/", "game_name": "chess-2016", "req_queue_length": 5, "active": true, "client_prefix": "ssh://webserver@megaminerai.com"}, "model": "thunderdome.arenaconfig", "pk": 10}, {"fields": {"beanstalk_host": "192.168.1.1", "config_name": "", "api_url_template": "http://54.198.128.224/api/repo/tags/", "game_name": "chess-2016", "req_queue_length": 5, "active": false, "client_prefix": "ssh://webserver@54.198.128.224"}, "model": "thunderdome.arenaconfig", "pk": 11}]
